update MNIST practice notebook

--- a/TensorFlow 入门项目--MNIST.ipynb
+++ b/TensorFlow 入门项目--MNIST.ipynb
@@ -27,7 +27,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# 执行这段 code，回去 执行 input_data.py 这个文件中的方法，download 相关的数据集\n",
@@ -164,6 +166,54 @@
     "`tf.argmax(y, 1)`表示模型对于任一输入x预测得到的 标签值\n",
     "`tf.argmax(y_, 1)`代表正确的标签\n",
     "用`tf.equal` 检测我们的预测是否真实标签匹配（索引 位置一样表示匹配）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 关于 Softmax回归模型\n",
+    "---\n",
+    "特点：\n",
+    "* 很火，很广泛使用的一种模型。\n",
+    "\n",
+    "简单理解：\n",
+    "* max：a和b, 且，a>b ,那么直接取a \n",
+    "* softmax: 我不想直接取a，我想这时候b也有小概率会取到，说不定b更有用呢？对吧\n",
+    "  * 现在还是a和b，a>b， 按照softmax 计算a和b的概率，那a的softmax值大于b的，所以a经常能取到，而b也偶尔会取到，概率和他们本身的大小有关。\n",
+    "\n",
+    "公式：\n",
+    "$$\n",
+    "S_i = \\frac{e^{V_i}}{\\sum_{i=1}^n{e^{V_i}}}\n",
+    "$$\n",
+    "\n",
+    "#### 交叉熵（Loss）\n",
+    "计算与标注样本的差距时，还是很有用的。\n",
+    "下面是交叉熵公式：\n",
+    "$$\n",
+    "L_i = -log(\\frac{e^{f_{y_i}}}{\\sum_j{e^j}})\n",
+    "$$\n",
+    "这个$e^{f_{y_i}}$就是指 这一组数据中 正确分类 对应的分子，那么一除，log里面的计算就是指这个正确分类的softmax值，它所占比重越大，整个样本的Loss就越小（这里，你想想log 函数的图形，$log(1)=0$ ，而$log(x<1)$是一个很大的负数）\n",
+    "\n",
+    "#### 之后就是 ， 梯度下降\n",
+    "怎么改进我们的Loss呢？要通过梯度下降，每次走一个step大小的梯度，\n",
+    "我们定义：选到$y_i$的概率是：\n",
+    "$$\n",
+    "P_{y_i} = \\frac{e^{f_{y_i}}}{\\sum_j{e^j}}\n",
+    "$$\n",
+    "然后我们求Loss对每个权重矩阵的偏导数，用链式法则:\n",
+    "$$\n",
+    "\\frac{dL_i}{df_{y_i}} = P_{y_i} -1\n",
+    "$$\n",
+    "最后结果的形式非常的简单，只要将算出来的概率的向量对应的真正结果的那一维减1，就可以了.\n",
+    "举个例子：\n",
+    "\n",
+    "条件：\n",
+    "* 若干次训练后，最后得到某个训练样本的向量的分数是[1,5,3]\n",
+    "\n",
+    "解：\n",
+    "* 概率：[0.015, 0.866, 0.117]\n",
+    "* 假设样本中正确的分类是第二个：偏导就是：[0.015, 0.866-1, 0.117]"
    ]
   }
  ],
